@@ -1,3 +1,7 @@
+2008-01-07  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tools/tiff2ps.c: fix up 64bit issues (from Edward Lam). 
+
 2008-01-01  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_dirwrite.c: #ifdef out lots of unused functions.
